Fix project rename.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<!-- Call the controller "album" as first element to charge  -->
 	
 	<welcome-file-list>		
-		<welcome-file>/album</welcome-file>
+		<welcome-file>album</welcome-file>
 	</welcome-file-list>
 
 </web-app>
