--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>meloMania</groupId>
-	<artifactId>meloMania</artifactId>
+	<groupId>melomania</groupId>
+	<artifactId>melomania</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1</version>
-	<name>meloMania</name>
+	<name>melomania</name>
 
 
 	<!-- variables comunes para todo el POM -->
@@ -48,9 +48,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.49</version>
+			<version>5.1.46</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>log4j</groupId>
@@ -111,6 +110,6 @@
 
 		</plugins>
 
-		<finalName>meloMania</finalName>
+		<finalName>melomania</finalName>
 	</build>
 </project>
