--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,8 @@
 
 	<!-- Call the controller "album" as first element to charge  -->
 	
-	<welcome-file-list>		
-		<welcome-file>album</welcome-file>
-	</welcome-file-list>
+<!-- 	<welcome-file-list>		 -->
+<!-- 		<welcome-file>album</welcome-file> -->
+<!-- 	</welcome-file-list> -->
 
 </web-app>
