--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
 			<version>${javax.servlet.jstl.version}</version>
 		</dependency>
 
-		<!-- MySQL -->
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<!-- SQLite -->
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.46</version>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.31.1</version>
 		</dependency>
 
 		<dependency>
