--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,15 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<appName>app-melomania</appName>
+				</configuration>
+			</plugin>
 
 		</plugins>
 
