--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
 	<!-- variables comunes para todo el POM -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java-version>11</java-version>
-		<junit.version>4.13</junit.version>
+		<java-version>1.8</java-version>		<junit.version>4.13</junit.version>
 		<javax.servlet.api>3.0.1</javax.servlet.api>
 		<javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
 		<javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
@@ -44,11 +43,10 @@
 		</dependency>
 
 		<!-- SQLite -->
-		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
 		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.31.1</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>			
+			<version>5.1.46</version>
 		</dependency>
 
 		<dependency>
@@ -129,17 +127,8 @@
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
-			</plugin>
+			</plugin>		
 			
-			<plugin>
-				<groupId>com.heroku.sdk</groupId>
-				<artifactId>heroku-maven-plugin</artifactId>
-				<version>3.0.2</version>
-				<configuration>
-					<appName>app-melomania</appName>
-				</configuration>
-			</plugin>
-
 		</plugins>
 
 		<finalName>melomania</finalName>
