--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,26 @@
-#configuracion para logs
-log4j.logger.com=ALL,CONSOLA,FICHERO
+#----------------------------------------------------------------------------
+#Log4J config
+#----------------------------------------------------------------------------
 
-#appender para escribir con consola
-log4j.appender.CONSOLA=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLA.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLA.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %l - %m%n
+# Setting Log4J to catch the logs from all classes
+log4j.rootLogger=ALL,CONSOLE,FILE
 
-#appender para escribir en un fichero de texto
-log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
-log4j.appender.FICHERO.File=trazas.log
-log4j.appender.FICHERO.layout=org.apache.log4j.PatternLayout
-log4j.appender.FICHERO.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %l - %m%n
+# Log levels that can be used above:
+# TRACE
+# DEBUG
+# INFO
+# WARN
+# ERROR
+# FATAL
+
+# Via console ---------------------
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %l - %m%n
+
+# Via file ---------------------
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.FILE.File=melomania_app.log
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %l - %m%n
+#----------------------------------------------------------------------------
