--- a/pom.xml
+++ b/pom.xml
@@ -9,24 +9,23 @@
 	<name>melomania</name>
 
 
-	<!-- variables comunes para todo el POM -->
+	<!-- Common variables -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java-version>1.8</java-version>		<junit.version>4.13</junit.version>
+		<java-version>11</java-version>
+		<junit.version>4.13</junit.version>
 		<javax.servlet.api>3.0.1</javax.servlet.api>
 		<javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
 		<javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
 	</properties>
 
-	<!-- librerias que vamos a usar u otros proyectos maven -->
-	<dependencies>
 
-		<!-- Web Project 3.0 -->
+	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${javax.servlet.api}</version>
-			<scope>provided</scope>  <!-- Nos lo provee el servidor de aplicaciones -->
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -45,7 +44,7 @@
 		<!-- SQLite -->
 		<dependency>
 			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>			
+			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.46</version>
 		</dependency>
 
@@ -97,7 +96,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
-			<scope>test</scope> <!-- solo se usa para Test, cuando se crea el projecto no se usa esta libreria -->
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -127,8 +126,8 @@
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
-			</plugin>		
-			
+			</plugin>
+
 		</plugins>
 
 		<finalName>melomania</finalName>
