--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 #Log4J config
 #----------------------------------------------------------------------------
 
-# Setting Log4J to catch the logs from all classes
+# Setting Log4J to catch the logs from all Java classes
 log4j.rootLogger=ALL,CONSOLE,FILE
 
 # Log levels that can be used above:
@@ -16,11 +16,13 @@ log4j.rootLogger=ALL,CONSOLE,FILE
 # Via console ---------------------
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %l - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} %-5p %l - %m%n
 
 # Via file ---------------------
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=melomania_app.log
+log4j.appender.FILE.File=melomania.log
+log4j.appender.FILE.MaxFileSize=5MB
+log4j.appender.FILE.MaxBackupIndex=10
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %l - %m%n
 #----------------------------------------------------------------------------
