--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,11 @@
 		<javax.servlet.api>3.0.1</javax.servlet.api>
 		<javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
 		<javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
+		<!-- Sonar -->
+		<sonar.projectKey>gromflomite_melomania</sonar.projectKey>
+		<sonar.organization>gromflomite</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
-
 
 	<dependencies>
 		<dependency>
@@ -68,7 +71,7 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.1.6.Final</version>
-		</dependency>		
+		</dependency>
 		<!-- End validations -->
 
 		<!-- Testing -->
